src/testing/private_tests/negative_tests/bad_include_1.eds
int fn(int i) {
#include "stdio.h"
	writeInteger(i);
	return i+1;
}

void main() {
	int i;
	i = 5;
	i = fn(i);
}
